--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
         </div>
            
         </section>
+
+        <section class="w-full ">
+
+        </section>
     </main>
 </body>
 </html>
